Add mongoose, mongodb, body-parser and short id to package.json Add required code for short url in server.js Add link for urlshortining microservice on index.html

--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="/timestamp">Timestamp Microservices</a></li>
         <li><a href="/header">Request Header Parser Microservices</a></li>
+        <li><a href="/url">URL Shortener Microservice</a></li>
     </ul>
 </body>
 </html>
